Fix Dark Mode

--- a/src/Sass/DetailPage.scss
+++ b/src/Sass/DetailPage.scss
@@ -18,7 +18,6 @@
   .detail-main button:hover{
     transform: translateY(-2px) scale(1.003) translateZ(0);
     transition: all 0.2s ease-in-out;
-    background-color: rgb(245, 245, 245);
   }
 }
 
